# kupi-scraper-mcp

./: .gitignore  .python-version  Dockerfile  README.md  pyproject.toml  sandbox.ipynb  slevy_all.csv
produkty/: dzusy.csv  koly.csv  ledove_caje.csv  limonady.csv  sirupy.csv  vody.csv
src/kupi_scraper_mcp/: __init__.py  __main__.py  server.py
tests/: test_cli.py  test_tools.py  test_transport.py
