[project]
name = "kupi-scraper-mcp"
version = "0.1.0"
description = "Railway-ready MCP server bootstrap with dummy scraping tools"
readme = "README.md"
requires-python = "==3.14.4"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "typer>=0.16.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[[project.authors]]
name = "Mattoni"

[project.scripts]
kupi-scraper-mcp = "kupi_scraper_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kupi_scraper_mcp"]

[tool.hatch.build]
packages = ["src/kupi_scraper_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
